--- a/index.css
+++ b/index.css
@@ -1,25 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;800&display=swap");
+html,
 body {
   background-color: rgb(217, 197, 155);
+  width: 100vw;
 }
 
-/*
-#root {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-*/
 .homepage {
   background-color: white;
   width: 80vw;
-  padding: 5%;
+  max-height: -moz-max-content;
+  max-height: max-content;
+  padding: 3%;
   border-radius: 10px;
-  margin-right: 4%;
-  margin-left: 4%;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 4%;
   background-repeat: no-repeat;
 }
@@ -216,10 +211,10 @@ main form img {
 
 .about {
   background-color: black;
-  width: 112%;
+  width: 108%;
   margin-top: 20%;
   position: relative;
-  margin-left: -6%;
+  margin-left: -4%;
 }
 .about #company h4 {
   font-size: 40px;
@@ -351,4 +346,138 @@ main form img {
   width: 20px;
   height: 20px;
   cursor: pointer;
+}
+
+.reviews {
+  background-color: black;
+  width: 108%;
+  height: 400px;
+  margin-top: 5%;
+  margin-left: -4%;
+  position: relative;
+  justify-content: space-evenly;
+}
+.reviews h5 {
+  font-size: 38px;
+  font-family: "Abhaya Libre", serif;
+  color: whitesmoke;
+  margin-left: 3%;
+  padding-top: 10%;
+  font-weight: 100;
+}
+.reviews h5 span {
+  color: rgb(172, 135, 54);
+  font-weight: 900;
+}
+.reviews #avis {
+  margin-top: -22%;
+  display: inline-flex;
+  margin-left: 28%;
+  padding: 5%;
+  position: absolute;
+  justify-content: space-evenly;
+}
+.reviews #avis article {
+  background-color: rgb(54, 54, 52);
+  width: 350px;
+  height: 250px;
+  padding-top: 5px;
+  padding-left: 2%;
+  display: inline-flex;
+  flex-direction: column;
+  margin: 2%;
+}
+.reviews #avis article img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-top: 2%;
+  position: absolute;
+}
+.reviews #avis article h6 {
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 2px;
+  margin-top: 8%;
+  color: white;
+  margin-left: 20%;
+}
+.reviews #avis article span {
+  font-size: 12px;
+  color: white;
+  font-weight: 300;
+  margin-left: 20%;
+}
+.reviews #avis article p {
+  font-size: 13px;
+  font-weight: 100;
+  color: rgb(152, 136, 136);
+}
+
+#faq {
+  font-family: "Abhaya Libre", serif;
+  padding-top: 8%;
+  padding-bottom: 8%;
+}
+#faq h5 {
+  font-size: 48px;
+  color: rgb(172, 135, 54);
+  text-align: center;
+  font-weight: 300;
+}
+#faq p {
+  font-size: 18px;
+}
+#faq hr {
+  color: rgb(152, 136, 136);
+}
+
+footer {
+  background-image: linear-gradient(to bottom, rgba(30, 30, 30, 0.747), rgba(2, 2, 2, 0.73)), url(Assets/justice.jpg);
+  background-size: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 108%;
+  height: 350px;
+  margin-top: 5%;
+  margin-left: -4%;
+  position: relative;
+  margin-bottom: -50px;
+  border-radius: 0 0 10px 10px;
+}
+footer h5 {
+  font-size: 38px;
+  font-family: "Abhaya Libre", serif;
+  color: whitesmoke;
+  margin-left: 3%;
+  padding-top: 6%;
+  font-weight: 100;
+}
+footer h5 span {
+  color: rgb(172, 135, 54);
+  font-weight: 900;
+}
+footer form {
+  margin-left: 50%;
+  margin-top: -12%;
+}
+footer form input,
+footer form textarea {
+  font-size: 12px;
+  margin: 4px;
+  padding: 15px;
+  color: whitesmoke;
+  background-color: rgb(54, 54, 52);
+  border: none;
+  width: 170px;
+}
+footer form textarea {
+  width: 380px;
+  height: 100px;
+}
+footer form svg {
+  margin-left: -45px;
+  color: whitesmoke;
 }/*# sourceMappingURL=index.css.map */
